[package]
name = "okkhor"
version = "0.5.2"
authors = ["Gulshanur Rahman<gulshanur@gmail.com>"]
edition = "2018"
rust-version = "1.44.1"
repository = "https://github.com/gulshan/okkhor/"
license = "MIT"
description = "A Rust library for English to Bangla phonetic conversion following the 'Avro' rules"

[features]
default = ["wee_alloc"]
editor = []
regex = []

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
criterion = "0.3"
rupantor = "0.3"

[[bench]]
name = "benching"
harness = false